<?xml version="1.0"?>
<package>
  <name>mrp2_gazebo</name>
  <version>0.2.0</version>
  <description>Simulation files for the PMB2 robot.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/Robots/MRP2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mrp2_description</run_depend>
  <run_depend>mrp2_hardware_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
